--- a/examples/express/public/index.html
+++ b/examples/express/public/index.html
@@ -1,37 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>node-gtfs</title>
-  <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="screen" title="no title" charset="utf-8">
+  <title>node-gtfs example</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="screen" charset="utf-8">
 
-  <link rel="stylesheet" href="http://code.leafletjs.com/leaflet-0.3.1/leaflet.css" />
+  <link rel="stylesheet" href="http://code.leafletjs.com/leaflet-0.3.1/leaflet.css">
   <!--[if lte IE 8]>
-    <link rel="stylesheet" href="http://code.leafletjs.com/leaflet-0.3.1/leaflet.ie.css" />
+    <link rel="stylesheet" href="http://code.leafletjs.com/leaflet-0.3.1/leaflet.ie.css">
   <![endif]-->
 
-  <style>
-    #data table tbody tr{
-      cursor:pointer;
-    }
-
-    .navigation{
-      height:30px;
-    }
-  
-    #map{
-      width:800px;
-      height:400px;
-      display:none;
-    }
-
-    footer{
-      margin-top:50px;
-      border-top:1px #CCC solid;
-      text-align:right;
-    }
-
-  </style>
-  
+  <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
 </head>
 <body>
   <div class="navbar">
@@ -44,13 +22,11 @@
         </a>
         <a class="brand" href="#">node-GTFS</a>
         <div class="nav-collapse">
-          <ul class="nav">
-            <!--
-            <li class="active"><a href="#agencies">Agencies</a></li>
-            <li><a href="#routes">Routes</a></li>
-            <li><a href="#stops">Stops</a></li>
-            <li><a href="#times">Times</a></li>
-            -->
+          <ul class="nav" id="top-menu">
+            <li class="active"><a href="#" id="all-agencies">All Agencies</a></li>
+            <li><a href="#" id="agencies-by-location">Agencies by location</a></li>
+            <li><a href="#" id="routes-by-location">Routes by location</a></li>
+            <li><a href="#" id="stops-by-location">Stops by location</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -62,11 +38,28 @@
       <button class="btn" id="nav-button" style="display:none"><i class="icon-arrow-left"></i> Back</button>
     </div>
 
-    <h1>Agencies</h1>
-    
-    <div id="data"></div>
+    <h1 id="pageTitle">Agencies</h1>
+
+    <form id="locationForm" class="form-inline form-search">
+      <fieldset class="control-group">
+        <label for="location">Location: </label>
+        <input type="text" name="location" id="location">
+      </fieldset>
+      <label for="radius">Radius: </label>
+      <select id="radius">
+        <option value="1">1 mile</option>
+        <option value="5">5 miles</option>
+        <option value="10">10 miles</option>
+        <option value="25" selected>25 miles</option>
+        <option value="100">100 miles</option>
+      </select>
+      <input type="submit" value="Find Agencies" class="btn">
+    </form>
+
 
     <div id="map"></div>
+
+    <div id="data"></div>
 
     <footer>
       <a href="https://github.com/brendannee/node-gtfs">View on Github</a>
@@ -78,5 +71,11 @@
   <script src="js/jquery-1.7.1.min.js"></script>
   <script src="http://code.leafletjs.com/leaflet-0.3.1/leaflet.js"></script>
   <script src="js/script.js"></script>
+  <script>
+    //get Agencies on pageload
+    $(document).ready(function(){
+      getAgencies();
+    });
+  </script>
 </body>
 </html>
