--- a/examples/express/public/index.html
+++ b/examples/express/public/index.html
@@ -68,7 +68,7 @@
   </div> <!-- /container -->
 
 
-  <script src="js/jquery-1.7.1.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
   <script src="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.js"></script>
   <script src="js/script.js"></script>
   <script>
