--- a/examples/express/public/index.html
+++ b/examples/express/public/index.html
@@ -28,7 +28,7 @@
             <li><a href="#" id="routes-by-location">Routes by location</a></li>
             <li><a href="#" id="stops-by-location">Stops by location</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </div>
   </div>
@@ -56,7 +56,6 @@
       <input type="submit" value="Find Agencies" class="btn">
     </form>
 
-
     <div id="map"></div>
 
     <div id="data"></div>
@@ -67,15 +66,8 @@
 
   </div> <!-- /container -->
 
-
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.js"></script>
   <script src="js/script.js"></script>
-  <script>
-    //get Agencies on pageload
-    $(document).ready(function(){
-      getAgencies();
-    });
-  </script>
 </body>
 </html>
